Fixing parallel divide for the case of the 0 mean